Cleaned up the style code

--- a/src/main/resources/css/atlas.css
+++ b/src/main/resources/css/atlas.css
@@ -478,3 +478,11 @@ body {
 .chiller-theme .sidebar-footer>a:last-child {
     border-right: none;
 }
+
+
+/*--------------------------map-----------------------------*/
+.map-wrapper {
+    height: -o-calc(100% - 65px); /* opera */
+    height: -webkit-calc(100% - 65px); /* google, safari */
+    height: -moz-calc(100% - 65px); /* firefox */
+}
